--- a/src/Tests/SenseNet.Search.Lucene29.Tests/packages.config
+++ b/src/Tests/SenseNet.Search.Lucene29.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="EntityFramework" version="6.1.2" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net452" />
+  <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="OpenPop.NET" version="2.0.6.1120" targetFramework="net452" />
   <package id="SenseNet.BlobStorage" version="7.1.1" targetFramework="net452" />
@@ -13,7 +15,7 @@
   <package id="SenseNet.Security.EF6SecurityStore" version="2.3.0.0" targetFramework="net452" />
   <package id="SenseNet.Services" version="7.1.1" targetFramework="net452" />
   <package id="SenseNet.TaskManagement.Core" version="1.1.0.0" targetFramework="net452" />
-  <package id="SenseNet.Tests" version="1.1.0" targetFramework="net452" />
+  <package id="SenseNet.Tests" version="1.2.0" targetFramework="net452" />
   <package id="SenseNet.Tools" version="2.1.1" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.3" targetFramework="net452" />
 </packages>
