--- a/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.nuspec
+++ b/src/SenseNet.Search.Lucene29/SenseNet.Search.Lucene29.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>SenseNet.Search.Lucene29</id>
-    <version>7.1.1</version>
+    <version>7.1.2</version>
     <title>sensenet Lucene29 library</title>
     <authors>kavics,tusmester</authors>
     <owners>Sense/Net</owners>
@@ -13,10 +13,11 @@
     <description>Lucene29 library for the sensenet platform containing the core indexing layer that works with Lucene index files directly.</description>
     <releaseNotes>See release notes on GitHub.</releaseNotes>
     <copyright>Copyright © Sense/Net Inc.</copyright>
-    <tags>sensenet ecm ecms indexing lucene</tags>
+    <tags>sensenet indexing lucene</tags>
     <dependencies>
       <dependency id="SenseNet.Search" version="1.1.0" />
       <dependency id="SenseNet.Tools" version="2.1.1" />
+      <dependency id="SenseNet.Security" version="2.3.1" />
     </dependencies>
   </metadata>
   <files>
