--- a/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.nuspec
+++ b/src/SenseNet.Search.Lucene29.Centralized/SenseNet.Search.Lucene29.Centralized.nuspec
@@ -16,9 +16,10 @@
     <tags>sensenet ecm ecms indexing lucene service</tags>
     <dependencies>
       <dependency id="SenseNet.Services" version="7.1.1" />
-      <dependency id="SenseNet.Search" version="1.1.0" />
-      <dependency id="SenseNet.Search.Lucene29" version="7.1.1" />
-      <dependency id="SenseNet.Search.Lucene29.Common" version="7.1.1" />
+      <dependency id="SenseNet.Search" version="2.0.0" />
+      <dependency id="SenseNet.Search.Lucene29" version="7.2" />
+      <dependency id="SenseNet.Search.Lucene29.Common" version="7.2" />
+      <dependency id="SenseNet.Security" version="3.0.0" />
     </dependencies>
   </metadata>
   <files>
